# osrest-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: tests.rs
